LAYOUT-STATICO FATTO

--- a/index.html
+++ b/index.html
@@ -12,8 +12,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- icone -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="box"></div>
+    <main>
+
+        <!-- SEZIONE PRINCIPALE -->
+        <section class="sezione-principale">
+            
+            <!-- BARRA LATERALE  -->
+            <nav class="barra-laterale">
+                <div class="box-debug">
+
+                </div>
+            </nav>
+            <!-- FINE BARRA LATERALE -->
+
+            <!-- SEZIONE ALBUM -->
+            <section class="sezione-album">
+                <header>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, sint illum? Autem cumque nulla voluptates, soluta molestias obcaecati doloribus consectetur, architecto unde vero iure corporis. Nulla deleniti aut consectetur mollitia.
+                </header>
+                <main>
+                    <div class="box-debug-main">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                    </div>
+                </main>
+            </section>
+            <!-- FINE SEZIONE ALBUM -->
+
+        </section>
+        <!-- FINE SEZIONE PRINCIPALE -->
+
+        <!-- SEZIONE PLAYER MUSICALE -->
+        <section class="sezione-player">
+            
+        </section>
+        <!-- FINE SEZIONE PLAYER MUSICALE -->
+    </main>
 </body>
 </html>
