LAYOUT RESPONSIVE COMPLETO

--- a/index.html
+++ b/index.html
@@ -32,19 +32,28 @@
             <!-- SEZIONE ALBUM -->
             <section class="sezione-album">
                 <header>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, sint illum? Autem cumque nulla voluptates, soluta molestias obcaecati doloribus consectetur, architecto unde vero iure corporis. Nulla deleniti aut consectetur mollitia.
+                    <a class="bottone-header" href="">Effettua l'Upgrade</a>
                 </header>
                 <main>
-                    <div class="box-debug-main">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem recusandae repudiandae reiciendis nisi odio illum, vitae ut enim laboriosam natus non error nemo molestiae voluptas consequuntur laudantium in quos sint!
+                    <div class="riga">
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
+                        <div class="col">
+                            <div class="carta box-debug-carta"></div>
+                        </div>
                     </div>
                 </main>
             </section>
