--- a/index.html
+++ b/index.html
@@ -35,27 +35,40 @@
                         <a class="bottone-header" href="">Effettua l'Upgrade</a>
                     </header>
                     <main>
-                   
+                        <!-- GRIGLIA -->
                         <div class="riga">
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/metal_lifting.jpg" alt="metal_lifting">
+                                </div>
                             </div>
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/stranger.jpeg" alt="stranger_things">
+                                </div>
                             </div>
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/aquietplace.jpeg" alt="a_quiet_place">
+                                </div>
                             </div>
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/split.jpeg" alt="split">
+                                </div>
                             </div>
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/cure.jpeg" alt="a_cure_for_wellness">
+                                </div>
                             </div>
                             <div class="col">
-                                <div class="carta box-debug-carta"></div>
+                                <div class="carta box-debug-carta">
+                                    <img src="img/sinister.jpeg" alt="sinister">
+                                </div>
                             </div>
                         </div>
+                        <!-- FINE GRIGLIA -->
                     </main>
                 </section>
                 <!-- FINE SEZIONE ALBUM -->
