--- a/index.html
+++ b/index.html
@@ -34,41 +34,77 @@
                     <header>
                         <a class="bottone-header" href="">Effettua l'Upgrade</a>
                     </header>
+                    <!-- Sezione nav -->
+                    <nav>
+                        <ul class="padding-verticale-2">
+                            <li>in evidenza</li>
+                            <li>podcast</li>
+                            <li>classifiche</li>
+                            <li>generi e mood</li>
+                            <li>nuove uscite</li>
+                            <li>scopri</li>
+                        </ul>
+                    </nav>
+                    <!-- Fine sezione nav -->
                     <main>
-                        <!-- GRIGLIA -->
-                        <div class="riga">
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/metal_lifting.jpg" alt="metal_lifting">
+                        <!-- Recently Played -->
+                        <section>
+                            <h1 class="titoli-sezioni">Recently Played</h1>
+                            <!-- GRIGLIA -->
+                            <div class="riga">
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/metal_lifting.jpg" alt="metal_lifting">
+                                        <h2 class="titoli-carte">Heavy Metal</h2>
+                                        <p class="sottotitolo">Subtitle</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/stranger.jpeg" alt="stranger_things">
+                                        <h2 class="titoli-carte">Stranger Thingd, Vol.1(a Netflix Original Series Soundtrack)</h2>
+                                        <p class="sottotitolo">Kyle Dixon & Micheal Stein</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/aquietplace.jpeg" alt="a_quiet_place">
+                                        <h2 class="titoli-carte">A a quiet place</h2>
+                                        <p class="sottotitolo">Subtitle</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/split.jpeg" alt="split">
+                                        <h2 class="titoli-carte">Split</h2>
+                                        <p class="sottotitolo">Subtitle</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/cure.jpeg" alt="a_cure_for_wellness">
+                                        <h2 class="titoli-carte">A cure for wellness</h2>
+                                        <p class="sottotitolo">Subtitle</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/sinister.jpeg" alt="sinister">
+                                        <h2 class="titoli-carte">Sinister</h2>
+                                        <p class="sottotitolo">Subtitle</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/stranger.jpeg" alt="stranger_things">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/aquietplace.jpeg" alt="a_quiet_place">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/split.jpeg" alt="split">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/cure.jpeg" alt="a_cure_for_wellness">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="carta box-debug-carta">
-                                    <img src="img/sinister.jpeg" alt="sinister">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- FINE GRIGLIA -->
+                            <!-- FINE GRIGLIA -->
+                        </section>
+                        <!-- Fine Recently Played -->
+
+                        <!-- Inizio Creato per Jhon Doe -->
+                        <section>
+                            <h2></h2>
+                        </section>
+                        <!-- Fine creato per Jhon Doe -->
+                        
                     </main>
                 </section>
                 <!-- FINE SEZIONE ALBUM -->
