--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <header>
                         <a class="bottone-header" href="">Effettua l'Upgrade</a>
                     </header>
+
                     <!-- Sezione nav -->
                     <nav>
                         <ul class="padding-verticale-2">
@@ -46,6 +47,7 @@
                         </ul>
                     </nav>
                     <!-- Fine sezione nav -->
+
                     <main>
                         <!-- Recently Played -->
                         <section>
@@ -55,42 +57,42 @@
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/metal_lifting.jpg" alt="metal_lifting">
-                                        <h2 class="titoli-carte">Heavy Metal</h2>
+                                        <h3 class="titoli-carte">Heavy Metal</h3>
                                         <p class="sottotitolo">Subtitle</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/stranger.jpeg" alt="stranger_things">
-                                        <h2 class="titoli-carte">Stranger Thingd, Vol.1(a Netflix Original Series Soundtrack)</h2>
+                                        <h3 class="titoli-carte">Stranger Thingd, Vol.1(a Netflix Original Series Soundtrack)</h3>
                                         <p class="sottotitolo">Kyle Dixon & Micheal Stein</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/aquietplace.jpeg" alt="a_quiet_place">
-                                        <h2 class="titoli-carte">A a quiet place</h2>
+                                        <h3 class="titoli-carte">A a quiet place</h3>
                                         <p class="sottotitolo">Subtitle</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/split.jpeg" alt="split">
-                                        <h2 class="titoli-carte">Split</h2>
+                                        <h3 class="titoli-carte">Split</h3>
                                         <p class="sottotitolo">Subtitle</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/cure.jpeg" alt="a_cure_for_wellness">
-                                        <h2 class="titoli-carte">A cure for wellness</h2>
+                                        <h3 class="titoli-carte">A cure for wellness</h3>
                                         <p class="sottotitolo">Subtitle</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="carta">
                                         <img src="img/sinister.jpeg" alt="sinister">
-                                        <h2 class="titoli-carte">Sinister</h2>
+                                        <h3 class="titoli-carte">Sinister</h3>
                                         <p class="sottotitolo">Subtitle</p>
                                     </div>
                                 </div>
@@ -100,10 +102,46 @@
                         <!-- Fine Recently Played -->
 
                         <!-- Inizio Creato per Jhon Doe -->
-                        <section>
-                            <h2></h2>
+                        <section class="creato-per">
+                            <h2 class="titoli-sezioni padding-verticale-1">Creato per John Doe</h2>
+                            <p class="sottotitolo">Più ascolti,più accurati saranno i suggerimenti.</p>
+                            <div class="riga">
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/radar.jpeg" alt="radar">
+                                        <h3 class="titoli-carte">Release Radar</h3>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/mixdaily.jpeg" alt="mixdaily">
+                                        <h3 class="titoli-carte">Daily Mix 1</h3>
+                                    </div>
+                                </div>
+                            </div>
                         </section>
                         <!-- Fine creato per Jhon Doe -->
+
+                        <!-- Inizio Artisti più popolari -->
+                        <section class="artisti">
+                            <h2 class="titoli-sezioni padding-verticale-1">Artisti più popolari</h2>
+                            <p class="sottotitolo">Più ascolti,più accurati saranno i suggerimenti.</p>
+                            <div class="riga">
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/youg.jpeg" alt="youg">
+                                        <h3 class="titoli-carte">Lana del Rey</h3>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="carta">
+                                        <img src="img/einaudi.jpeg" alt="Einaudi">
+                                        <h3 class="titoli-carte">Ludovico Einaudi</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- Fine Artisti più popolari -->
                         
                     </main>
                 </section>
