BARRA LATERALE FATTA

--- a/index.html
+++ b/index.html
@@ -23,8 +23,49 @@
             <section class="sezione-principale">
                 <!-- BARRA LATERALE  -->
                 <nav class="barra-laterale">
-                    <div class="box-debug">
-
+                    <!-- Logo -->
+                    <img class="logo" src="img/logo.svg" alt="logo">
+                    <!-- Lista -->
+                    <ul>
+                        <li>
+                            <i><img src="img/home.svg" alt="home"></i>
+                            <a href="">Home</a> 
+                        </li>
+                        <li>
+                            <i><img src="img/search.svg" alt="home"></i>
+                            <a href="">Cerca</a> 
+                        </li>
+                        <li>
+                            <i><img src="img/libreria.svg" alt="home"></i>
+                            <a href="">La tua libraria</a> 
+                        </li>
+                    </ul>
+                    <!-- 2 Lista Playlist -->
+                    <h4>playlist</h4>
+                    <div class="playlist">
+                        <button>
+                            <span>
+                                <i class="fa-sharp fa-solid fa-plus"></i>
+                            </span>   
+                        </button> 
+                        <a href="">Crea Playlist</a> 
+                        <ul>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                        </ul>
+                    </div>
+                    <!-- footer barra laterale -->
+                    <div class="barra-laterale-footer padding-sinistra-1">
+                        <i><img class="icona-download" src="img/download.svg" alt="download"></i>
+                        <a href="">Installa app</a> 
+                        <hr>
+                        <i><img class="icona-utente" src="img/profile.svg" alt="profile"></i>
+                        <h6 class="nome-utente">Jhon Doe</h6>
                     </div>
                 </nav>
                 <!-- FINE BARRA LATERALE -->
@@ -34,8 +75,8 @@
                     <header>
                         <a class="bottone-header" href="">Effettua l'Upgrade</a>
                     </header>
-
                     <!-- Sezione nav -->
+
                     <nav>
                         <ul class="padding-verticale-2">
                             <li>in evidenza</li>
@@ -141,8 +182,7 @@
                                 </div>
                             </div>
                         </section>
-                        <!-- Fine Artisti più popolari -->
-                        
+                        <!-- Fine Artisti più popolari -->         
                     </main>
                 </section>
                 <!-- FINE SEZIONE ALBUM -->
