barra footer posizionata

--- a/index.html
+++ b/index.html
@@ -23,43 +23,46 @@
             <section class="sezione-principale">
                 <!-- BARRA LATERALE  -->
                 <nav class="barra-laterale">
-                    <!-- Logo -->
-                    <img class="logo" src="img/logo.svg" alt="logo">
-                    <!-- Lista -->
-                    <ul>
-                        <li>
-                            <i><img src="img/home.svg" alt="home"></i>
-                            <a href="">Home</a> 
-                        </li>
-                        <li>
-                            <i><img src="img/search.svg" alt="home"></i>
-                            <a href="">Cerca</a> 
-                        </li>
-                        <li>
-                            <i><img src="img/libreria.svg" alt="home"></i>
-                            <a href="">La tua libraria</a> 
-                        </li>
-                    </ul>
-                    <!-- 2 Lista Playlist -->
-                    <h4>playlist</h4>
-                    <div class="playlist">
-                        <button>
-                            <span>
-                                <i class="fa-sharp fa-solid fa-plus"></i>
-                            </span>   
-                        </button> 
-                        <a href="">Crea Playlist</a> 
+                    <!-- Barra laterale main -->
+                    <div class="barra-laterale-main">
+                        <!-- Logo -->
+                        <img class="logo" src="img/logo.svg" alt="logo">
+                        <!-- Lista -->
                         <ul>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
-                            <li>Nome Playlist</li>
+                            <li>
+                                <i><img src="img/home.svg" alt="home"></i>
+                                <a href="">Home</a> 
+                            </li>
+                            <li>
+                                <i><img src="img/search.svg" alt="home"></i>
+                                <a href="">Cerca</a> 
+                            </li>
+                            <li>
+                                <i><img src="img/libreria.svg" alt="home"></i>
+                                <a href="">La tua libraria</a> 
+                            </li>
                         </ul>
+                        <!-- 2 Lista Playlist -->
+                        <h4>playlist</h4>
+                        <div class="playlist">
+                            <button>
+                                <span>
+                                    <i class="fa-sharp fa-solid fa-plus"></i>
+                                </span>   
+                            </button> 
+                            <a href="">Crea Playlist</a> 
+                            <ul>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
+                        </div>
                     </div>
-                    <!-- footer barra laterale -->
+                    <!-- Footer barra laterale -->
                     <div class="barra-laterale-footer padding-sinistra-1">
                         <i><img class="icona-download" src="img/download.svg" alt="download"></i>
                         <a href="">Installa app</a> 
