barra laterale responsive completa

--- a/index.html
+++ b/index.html
@@ -25,50 +25,66 @@
                 <nav class="barra-laterale">
                     <!-- Barra laterale main -->
                     <div class="barra-laterale-main">
-                        <!-- Logo -->
-                        <img class="logo" src="img/logo.svg" alt="logo">
-                        <!-- Lista -->
-                        <ul>
-                            <li>
-                                <i><img src="img/home.svg" alt="home"></i>
-                                <a href="">Home</a> 
-                            </li>
-                            <li>
-                                <i><img src="img/search.svg" alt="home"></i>
-                                <a href="">Cerca</a> 
-                            </li>
-                            <li>
-                                <i><img src="img/libreria.svg" alt="home"></i>
-                                <a href="">La tua libraria</a> 
-                            </li>
-                        </ul>
-                        <!-- 2 Lista Playlist -->
-                        <h4>playlist</h4>
-                        <div class="playlist">
-                            <button>
-                                <span>
-                                    <i class="fa-sharp fa-solid fa-plus"></i>
-                                </span>   
-                            </button> 
-                            <a href="">Crea Playlist</a> 
+                        <div class="contenitore-a-scomparsa">
+                            <!-- Logo -->
+                            <img class="logo" src="img/logo.svg" alt="logo">
+                            <!-- Lista -->
                             <ul>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
+                                <li>
+                                    <i><img src="img/home.svg" alt="home"></i>
+                                    <a href="">Home</a> 
+                                </li>
+                                <li>
+                                    <i><img src="img/search.svg" alt="home"></i>
+                                    <a href="">Cerca</a> 
+                                </li>
+                                <li>
+                                    <i><img src="img/libreria.svg" alt="home"></i>
+                                    <a href="">La tua libraria</a> 
+                                </li>
                             </ul>
+                            <!-- 2 Lista Playlist -->
+                            <h4>playlist</h4>
+                            <div class="playlist">
+                                <button>
+                                    <span>
+                                        <i class="fa-sharp fa-solid fa-plus"></i>
+                                    </span>   
+                                </button> 
+                                <a href="">Crea Playlist</a> 
+                                <ul>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                </ul>
+                            </div>
                         </div>
+                        <!-- PARTE RESPONSIVE XS-->
+                        <div class="barra-laterale-xs">
+                            <img class="immagine-mini" src="img/logo-small.svg" alt="logo-small">
+                            <i><img class="immagine-mini" src="img/home.svg" alt="home"></i>
+                            <i><img class="immagine-mini" src="img/search.svg" alt="search"></i>
+                            <i><img class="immagine-mini" src="img/libreria.svg" alt="libreria"></i>
+                        </div>
+                        <!-- FINE PARTE RESPONSIVE XS -->
                     </div>
                     <!-- Footer barra laterale -->
-                    <div class="barra-laterale-footer padding-sinistra-1">
-                        <i><img class="icona-download" src="img/download.svg" alt="download"></i>
-                        <a href="">Installa app</a> 
-                        <hr>
-                        <i><img class="icona-utente" src="img/profile.svg" alt="profile"></i>
-                        <h6 class="nome-utente">Jhon Doe</h6>
+                    <div class="barra-laterale-footer">
+                        <div class="contenitore-a-scomparsa">
+                            <i><img class="icona-download" src="img/download.svg" alt="download"></i>
+                            <a href="">Installa app</a> 
+                            <hr>
+                            <i><img class="icona-utente" src="img/profile.svg" alt="profile"></i>
+                            <h6 class="nome-utente">Jhon Doe</h6>
+                        </div>
+                        <div class="barra-laterale-xs">
+                            <i><img class="icona-download-xs" src="img/download.svg" alt="download"></i>
+                            <i><img class="icona-utente icona-utente-xs" src="img/profile.svg" alt="profilo"></i>
+                        </div>
                     </div>
                 </nav>
                 <!-- FINE BARRA LATERALE -->
