SITO COMPLETO(HOVER DA AGGIUNGERE DOMANI)

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                         </div>
                         <!-- FINE PARTE RESPONSIVE XS -->
                     </div>
+
                     <!-- Footer barra laterale -->
                     <div class="barra-laterale-footer">
                         <div class="contenitore-a-scomparsa">
@@ -210,7 +211,48 @@
 
             <!-- SEZIONE PLAYER MUSICALE -->
             <section class="sezione-player">
-                
+                <!-- Sezione canzone -->
+                <div class="canzone">
+                    <img src="img/sinister.jpeg" alt="sinister-cover">
+                    <div class="info-canzone">
+                        <h6 class="nome-artista">Sinister</h6>
+                        <p class="nome-brano">Brano Nome</p>
+                    </div>
+                    <div class="sezione-icone-canzone">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                </div>
+                <!-- Sezione riproduzione -->
+                <div class="sezione-riproduzione">
+                    <div class="riproduzione">
+                        <div class="contenitore-bottoni">
+                            <span><i class="bottoni fa-solid fa-shuffle"></i></span>
+                            <span><i class="bottoni fa-solid fa-backward-step"></i></span>
+                            <span><i class="bottone-grande fa-regular fa-circle-play"></i></span>
+                            <span><i class="bottoni fa-solid fa-forward-step"></i></span>
+                            <span><i class="bottoni fa-solid fa-rotate-right"></i></span>
+                        </div>
+                        <div class="contenitore-barra">
+                            <p class="minutaggio">0:25</p>
+                            <div class="barra">
+                                <div class="barra-interna">
+
+                                </div>
+                            </div>
+                            <p class="minutaggio">4:35</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Sezione volume -->
+                <div class="volume">
+                    <span><i class="fa-solid fa-list-ul"></i></span>
+                    <span><i class="fa-solid fa-display"></i></span>
+                    <span><i class="fa-solid fa-volume-high"></i></span>
+                    <div class="barra">
+                        <div class="barra-interna"></div>
+                    </div>
+                </div>
             </section>
             <!-- FINE SEZIONE PLAYER MUSICALE -->
         </div>
